SOLR-13655:Upgrade Collections.unModifiableSet to Set.of and Set.copyOf