@@ -19,9 +19,7 @@ package org.apache.solr.cloud.api.collections;
 
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -58,12 +56,12 @@ public class CategoryRoutedAlias extends RoutedAlias {
    * Parameters required for creating a category routed alias
    */
   @SuppressWarnings("WeakerAccess")
-  public static final Set<String> REQUIRED_ROUTER_PARAMS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+  public static final Set<String> REQUIRED_ROUTER_PARAMS = Set.of(
       CommonParams.NAME,
       ROUTER_TYPE_NAME,
       ROUTER_FIELD,
       ROUTER_MAX_CARDINALITY
-  )));
+  );
 
   public static final String ROUTER_MUST_MATCH = "router.mustMatch";
 
@@ -71,9 +69,9 @@ public class CategoryRoutedAlias extends RoutedAlias {
    * Optional parameters for creating a category routed alias excluding parameters for collection creation.
    */
   @SuppressWarnings("WeakerAccess")
-  public static final Set<String> OPTIONAL_ROUTER_PARAMS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+  public static final Set<String> OPTIONAL_ROUTER_PARAMS = Set.of(
       ROUTER_MAX_CARDINALITY,
-      ROUTER_MUST_MATCH)));
+      ROUTER_MUST_MATCH);
 
   private Aliases aliases;
   private final String aliasName;
